# django-books

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
books/books/: settings.py  urls.py
books/store/: admin.py  logic.py  models.py  serializers.py  views.py
books/store/migrations/: 0001_initial.py  0002_book_author_name.py
books/store/tests/: test_api.py  test_logic.py  test_serializers.py
books/templates/: oauth.html
